[gd_scene load_steps=7 format=2]

[ext_resource path="res://Font/19148.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/ButtonsMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Logo" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -269.0
margin_right = 512.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
text = "Attoth"
align = 1

[node name="Play" type="Button" parent="."]
margin_left = 456.5
margin_top = 230.0
margin_right = 567.5
margin_bottom = 274.0
custom_colors/font_color = Color( 0.596078, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Играть"
flat = true

[node name="Autors" type="Button" parent="."]
margin_left = 456.5
margin_top = 270.0
margin_right = 567.5
margin_bottom = 314.0
custom_colors/font_color = Color( 0.596078, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Авторы"
flat = true

[node name="Quit" type="Button" parent="."]
margin_left = 456.5
margin_top = 310.0
margin_right = 567.5
margin_bottom = 354.0
custom_colors/font_color = Color( 0.596078, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Выйти"
flat = true

[connection signal="pressed" from="Play" to="." method="_on_Play2_pressed"]
[connection signal="pressed" from="Autors" to="." method="_on_Autors_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
